2009-12-03  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-mode-map): define bindings so
	as to be also valid even on non-window terminal.

2009-12-02  Naohiro Aota  <naota@elisp.net>

	* twittering-mode.el (twittering-icon-path): New funciton.
	(twittering-format-status): Use it.
	(twittering-get-twits): Ditto; wget now invoked for each icon.

2009-12-01  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-update-status-from-minibuffer):
	Add more strict length check for status.
	
	* twittering-mode.el (twittering-status-not-blank-p): New defun to
	separate a check code from twittering-update-status-if-not-blank.
	(twittering-update-status-from-minibuffer): Integrate a post code
	from twittering-update-status-if-not-blank.
	(twittering-update-status-if-not-blank): Remove.

2009-11-30  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-max-number-of-tweets-on-retrieval)
	(twittering-number-of-tweets-on-retrieval): add
	(twittering-http-get-list-index-sentinel): restore the variable
	'indexes' removed by mistake
	(twittering-get-twits): use 'twittering-number-of-tweets-on-retrieval'
	These changes were made by cvmat. thanks.

2009-11-29  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-status-to-status-datum): defined
	screen-name-in-text property
	(twittering-enter)
	(twittering-other-user-timeline-interactive)
	(twittering-other-user-timeline):
	put a screen-name-in-text ahead of other elements(uri, ...)

2009-11-28  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* test/run-test.el (twittering-run-test): use test.el

	* twittering-mode.el (twittering-http-get, twittering-http-post):
	use a temp-buffer for each connection. This change solved the
	problem caused by concurrent HTTP request.
	(twittering-get-response-header, twittering-get-response-body):
	requires 'buffer' because now each http request is associated with
	its temp buffer
	(twittering-http-buffer): removed
